# discord-clone

./: Makefile
backend/: .pylintrc  pyproject.toml  setup.cfg
backend/local/: Dockerfile  docker-compose.yaml  local.mk
backend/src/entities/: base.py  server.py  user.py
backend/src/entrypoints/: __init__.py  api.py
backend/src/infrastructure/adapters/: cors.py  rate_limit.py  tracing.py
backend/src/infrastructure/adapters/broadcast/: broadcast.py  container.py  service.py
backend/src/infrastructure/adapters/database/: container.py  database.py
backend/src/infrastructure/adapters/database/repositories/: errors.py  server.py  server_member.py  server_role.py  user.py
backend/src/infrastructure/adapters/database/services/: server.py  server_member.py  server_role.py  user.py
backend/src/infrastructure/adapters/database/tables/: base.py  (+4 more)
backend/src/infrastructure/adapters/redis/: container.py  service.py
backend/src/infrastructure/configuration/: __init__.py
backend/src/infrastructure/fastapi/: base_endpoints.py  channel_endpoints.py  main.py  server_endpoints.py  user_endpoints.py
backend/src/interfaces/: broadcast.py
backend/src/use_cases/: server.py  user.py
backend/src/use_cases/dtos/: channels.py
backend/src/use_cases/serializers/: server_serializer.py  user_serializer.py
backend/src/use_cases/services/: server_member.py  user.py
backend/tests/: conftest.py  test_channel.py
backend/tests/endpoints/: test_base_endpoints.py  test_redis_endpoints.py
backend/tests/serializers/: test_server.py
backend/tests/use_cases/: test_server.py
(+40 files in other folders)
